removed image file and updated HTML description

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
+    	<meta name="description" content="Reproducing the card game 'War' using the playing card API.">
     	<meta name="keywords" content="one, two, three">
 
 		<title>Title in the tab</title>
