players take each others cards when won, and now a 26 hand limit so the game is shorter

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<h3 id="resultText">Result</h3>
 
 			<div class="scoreContainer">
-				<h3 class="currentScore">Current Score</h3>
+				<h3 class="currentScore">Cards Left</h3>
 				<h4>Player 1: <span id="player1Score">0</span></h4>
 				<h4>Player 2: <span id="player2Score">0</span></h4>
 			</div>
