--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="Reproducing the card game 'War' using the playing card API.">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>War: Card Game</title>
 
 		<!-- external CSS link -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
